- sakārtots - izvākts liekais