@@ -306,13 +306,13 @@ public class DocumentInfoController extends DegraController {
 			ObservableList<CustomerAccount> customerBankAccounts = FXCollections.observableList(
 					customerAccountService.getCustomerBankAccounts(selectedCustomer, selectedBank));
 			if (customerBankAccounts.size() == 1) {
-				CustomerAccount account = customerBankAccounts.getFirst();
+				CustomerAccount account = customerBankAccounts.get(0);
 				accountCombo.setItems(customerBankAccounts);
 				accountCombo.setValue(account);
 			} else {
 				accountCombo.setItems(customerBankAccounts);
 				if (customerBankAccounts.size() == 1) {
-					accountCombo.setValue(customerBankAccounts.getFirst());
+					accountCombo.setValue(customerBankAccounts.get(0));
 				} else {
 					accountCombo.setValue(null);
 				}
@@ -347,7 +347,7 @@ public class DocumentInfoController extends DegraController {
 					customerAccountService.getCustomerBankAccounts(selectedCustomer, selectedBank));
 			accountCombo.setItems(customerBankAccounts);
 			if (customerBankAccounts.size() == 1) {
-				accountCombo.setValue(customerBankAccounts.getFirst());
+				accountCombo.setValue(customerBankAccounts.get(0));
 			} else {
 				accountCombo.setValue(null);
 				accountCombo.setItems(FXCollections.observableArrayList());
